array.island.Island.scala.error
Erreur de compilation :
Island:10: error: ')' expected but 'while' found.
    while (num(i)>=num(i+1) {
    ^Island:13: error: ')' expected but '}' found.
  }
  ^